# sigmacheck

./: Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md  cases.json  encoded_powershell.yml
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
sigmacheck/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
sigmacheck/demos/02-deep/: SCENARIO.md  events.jsonl  rules.yml
sigmacheck/tests/: test_deep.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
