[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-sigmacheck"
version = "0.1.0"
description = "Lint and unit-test Sigma detection rules against sample events"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "tactical", "sigmacheck"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/sigmacheck"

[project.scripts]
sigmacheck = "sigmacheck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sigmacheck"]
